# logic-game-solver

./: .gitignore  README.md  notes.md  pyproject.toml
logic_game_solver/_template/: __init__.py  engine.py  exceptions.py
logic_game_solver/games/: __init__.py
logic_game_solver/games/_binoxxo/: __init__.py  engine.py
logic_game_solver/games/_sudoku/: __init__.py  engine.py
logic_game_solver/template/: engine.py  state.py
